fix ad img size bug ; fix case layout bug

--- a/src/styles/pages/chat.less
+++ b/src/styles/pages/chat.less
@@ -59,7 +59,7 @@
             padding: 3vw 3vw 0 3vw;
 
             .advertising {
-                width: 100%;
+                flex: auto;
                 box-shadow: 0 1.40625vw 3.125vw 0.46875vw rgba(0, 0, 0, .096);
                 border-radius: 2.5vw;
                 background-color: #fff;
